--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
 
       .header {
-        background-image: url('https://auto-cold-email-bucket.s3.ap-south-1.amazonaws.com/ColdEmailImg/Background.png');
+        background-image: url('https://auto-email-sarvesh.s3.us-east-1.amazonaws.com/ColdEmailImg/Background.png');
         background-size: cover;
         background-position: center;
         height: 250px;
@@ -161,7 +161,7 @@
 
       <!-- CEO Image Positioned at the Bottom -->
       <div class="ceo-image-container">
-        <img src="https://auto-cold-email-bucket.s3.ap-south-1.amazonaws.com/ColdEmailImg/Sarvesh.jpeg" alt="Sarvesh Khamkar" class="ceo-image" />
+        <img src="https://auto-email-sarvesh.s3.us-east-1.amazonaws.com/ColdEmailImg/Sarvesh.jpeg" alt="Sarvesh Khamkar" class="ceo-image" />
       </div>
 
       <!-- CEO Section -->
