forward issue fixed

--- a/index.html
+++ b/index.html
@@ -170,97 +170,49 @@
         <p>Software Developer</p>
       </div>
 
-      <!-- Main Content -->
+ <!-- Main Content -->
       <div class="content">
         <p class='para'>Dear ${person.name},</p>
-        <p class='para'>I hope this email finds you well.</p>
+        <p class='para'>I hope you're doing well.</p>
         <p class='para'>
-          My name is Sarvesh Khamkar, and I am writing to express my interest in
-          the ${position} at ${person.comapny}, which I came across on LinkedIn. I
-          believe my technical skills and passion align perfectly with your
-          team’s mission.
+          My name is Sarvesh Khamkar, and I am currently pursuing <strong>M.Tech in Computer Science (Artificial Intelligence)</strong> at <strong>IIIT Pune</strong> (Indian Institute of Information Technology, Pune). I'm reaching out to explore potential <strong>Software Development Internship</strong> opportunities at ${person.company}.
         </p>
         <p class='para'>
-          I am highly skilled in Java, SpringBoot, JavaScript, Node.js and have
-          a strong foundation in data structures and algorithms. During my time
-          at Code-B on the <a href="https://mple.ai/">mple.ai</a> AI Training
-          and Hiring Platform team, I gained significant experience in software
-          development, working on cloud-based solutions and collaborating across
-          teams. Some of my key accomplishments include:
+          I have hands-on experience building <strong>real-world, production-ready systems</strong> using <strong>Java, Spring Boot, Node.js, React, and JavaScript</strong>. Recently, I worked as a <strong>Full Stack Developer</strong> on an AI-based hiring platform <a href="https://mple.ai/">mple.ai</a>, where I:
         </p>
 
-        <!-- Numbered List -->
-        <table class="numbered-list" cellpadding="0" cellspacing="0">
-          <tr>
-            <td style ="background-color:  #4a148c;">1</td>
-            <td>
-              <strong>Automated interview email system:</strong> Created an
-              automated email system using Node.js, MongoDB, and Nodemailer.
-              This system handles interview links and expiration notifications,
-              reducing manual intervention by 50%.
-            </td>
-          </tr>
-          <tr>
-            <td style ="background-color: #4a148c;">2</td>
-            <td>
-              <strong>Dynamic interview generation:</strong> Contributed to the
-              Automated Interview Generation team. Developed an AI-driven
-              interview system using OpenAI API and speech-to-text, generating
-              dynamic questions based on resumes and previous responses to
-              improve user engagement.
-            </td>
-          </tr>
-          <tr>
-            <td style ="background-color: #4a148c;">3</td>
-            <td>
-              <strong>Access control via AuthGuard:</strong> Implemented
-              restrictions on candidate result access within the organization to
-              ensure data privacy and compliance.
-            </td>
-          </tr>
-          <tr>
-            <td style ="background-color: #4a148c;">4</td>
-            <td>
-              <strong>Talent pool filters and dynamic flow diagrams:</strong>
-              Developed a candidate filtering system for the job pool, utilizing
-              various metrics such as score, role, and gender; implemented a
-              React flow diagram to visualize the reporting structure of all
-              employees within the organization.
-            </td>
-          </tr>
-          <tr>
-            <td style ="background-color: #4a148c;">5</td>
-            <td>
-              <strong>Landing page optimization:</strong> Created a
-              user-friendly landing page in Svelte, increasing web traffic by
-              30%.
-            </td>
-          </tr>
-          <tr>
-            <td style ="background-color: #4a148c;">6</td>
-            <td>
-              <strong>Daily Bug solving:</strong> Worked with a software tester
-              to resolve bugs on a daily basis.
-            </td>
-          </tr>
-        </table>
+        <p class='para' style="margin-left: 20px; line-height: 1.8;">
+          • Built <strong>automated interview email workflows</strong> using Node.js & MongoDB<br/>
+          • Worked on <strong>AI-driven interview generation</strong> using OpenAI APIs<br/>
+          • Developed <strong>backend APIs and frontend features</strong> used by real users
+        </p>
 
         <p class='para'>
-          I have attached my resume for your review and provided links to my
-          LinkedIn and GitHub profiles below. I would be thrilled to bring my
-          skills and experience to ${person.comapny} and discuss how I can
-          contribute to the team. Thank you for considering my application.
+          I enjoy working on <strong>scalable systems</strong>, writing <strong>clean code</strong>, and learning fast in real engineering environments.
+        </p>
+        <p class='para'>
+          I've attached my resume for your review. You can also find my work here:
+        </p>
+        <p class='para' style="margin-left: 20px;">
+          • LeetCode: <a href="https://leetcode.com/u/SaruDon/" target="_blank">https://leetcode.com/u/SaruDon/</a><br/>
+          • GitHub: <a href="https://github.com/SaruDon" target="_blank">https://github.com/SaruDon</a><br/>
+          • LinkedIn: <a href="https://www.linkedin.com/in/sarvesh-khamkar-0597351b4/" target="_blank">https://www.linkedin.com/in/sarvesh-khamkar-0597351b4/</a>
+        </p>
+        <p class='para'>
+          If you're open to it, I'd love to have a quick 10-minute conversation to understand how I could contribute to your team.
+        </p>
+        <p class='para'>
+          Thank you for your time and consideration.
         </p>
         <div class="signature">
         Best regards,<br />
-        Sarvesh Khamkar,<br />
-        <a href="mailto:sarveshkhamkar321@gmail.com"
-          >sarveshkhamkar321@gmail.com</a
+        Sarvesh Khamkar<br />
+        📧 <a href="mailto:sarveshdev2002@gmail.com"
+          >sarveshdev2002@gmail.com</a
         ><br />
-        <a href="tel:+9321555257">9321555257</a>
+        📞 <a href="tel:+9321555257">9321555257</a>
       </div>
       </div>
-
       <!-- Signature -->
       
 
